fixed viberant image on mobile

--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -19,7 +19,7 @@
 }
 
 #viberant {
-    height: 100%;
+    max-height: 100%;
     max-width: 100%;
     margin: 0 auto;
     display: block;
